Quick main page changes

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="single-service pb-40">
-                                <i class="fa fa-line-chart" aria-hidden="true"></i>
-                                <h4>Delicious</h4>
+                                <i class="fa fa-bomb" aria-hidden="true"></i>
+                                <h4>Bomb Delicious</h4>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="single-service pb-40">
-                                <i class="fa fa fa-rocket" aria-hidden="true"></i>
+                                <i class="fa fa fa-globe" aria-hidden="true"></i>
                                 <h4>Locally Sourced</h4>
                             </div>
                         </div>
