--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 work-right">
-                    <div class="fb-page" data-href="https://www.facebook.com/PuttinOnTheMitts" data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
+					<div class="fb-page" data-href="https://www.facebook.com/PuttinOnTheMitts/" data-tabs="timeline" data-width="400" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/PuttinOnTheMitts/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/PuttinOnTheMitts/">Puttin On The Mitts</a></blockquote></div>
                 </div>
             </div>
         </div>
