--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         <!-- Logo -->
                         <a class="nav-brand" href="index.html">
-                            <img src="img/logo.jpg" alt="">
+                            <img src="img/logo.jpg" alt="Puttin on the Mitts">
                         </a>
 
                         <!-- Navbar Toggler -->
@@ -426,7 +426,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-6 footer-left">
-                    <img src="img/logo-w.png" alt="logo">
+                    <img src="img/logo.jpg" alt="Puttin on the Mitts">
                 </div>
                 <div class="col-lg-6 col-sm-6 footer-right">
                     <ul class="social_links">
