--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 <div class="col-lg-6 col-sm-6 footer-right">
                     <ul class="social_links">
                         <li>
-                            <a href="#">
+                            <a href="https://www.facebook.com/PuttinOnTheMitts/">
                                 <i class="fa fa-facebook-square" aria-hidden="true"></i>
                             </a>
                         </li>
@@ -443,11 +443,6 @@
                         <li>
                             <a href="#">
                                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-google-plus-square" aria-hidden="true"></i>
                             </a>
                         </li>
                     </ul>
