Footer Social Switch

--- a/index.html
+++ b/index.html
@@ -437,12 +437,12 @@
                         </li>
                         <li>
                             <a href="#">
-                                <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                                <i class="fa fa-instagram-square" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                                <i class="fa fa-twitter-square" aria-hidden="true"></i>
                             </a>
                         </li>
                     </ul>
