--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <i class="fa fa-instagram-square" aria-hidden="true"></i>
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li>
