--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <!-- End contact section -->
 
     <!-- Start footer section -->
-    <footer class="footer-section black-bg section-half">
+    <footer class="footer-section footer-bg section-half">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-6 footer-left">
