--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         <!-- Logo -->
                         <a class="nav-brand" href="index.html">
-                            <img src="img/logo.jpg" alt="Puttin on the Mitts">
+                            <img src="img/logo.png" alt="Puttin on the Mitts">
                         </a>
 
                         <!-- Navbar Toggler -->
@@ -87,19 +87,16 @@
                             <div class="dopenav">
                                 <ul id="nav">
                                     <li>
-                                        <a href="#">Home</a>
+                                        <a href="#header_section">Home</a>
                                     </li>
                                     <li>
-                                        <a href="#about-section">About</a>
+                                        <a href="#about-section">Our Mission</a>
                                     </li>
                                     <li>
-                                        <a href="#service-section">Desserts</a>
+                                        <a href="#menu-section">Menu</a>
                                     </li>
                                     <li>
-                                        <a href="#work-section">Photo Gallery</a>
-                                    </li>
-                                    <li>
-                                        <a href="#team-section">Team</a>
+                                        <a href="#photo-section">Photo Gallery</a>
                                     </li>
                                     <li>
                                         <a href="#contact-section">Contact</a>
@@ -122,13 +119,13 @@
             <div class="overlay overlay-bg"></div>
             <div class="row justify-content-center align-items-center fullscreen text-center">
                 <div class="col-lg-12">
-                    
-                    <h1 class="text-uppercase">Puttin' On The Mitts: Puddin' and Dessert Truck</h1>
+                    <img src="img/putting-on-the-mitts.png" class="logo-lead">
+                    <h1 class="text-uppercase">Puttin' On The Mitts<br /> Puddin' and Dessert Truck</h1>
                     <p>
-                        Alcohol-inspired pudding sundaes and pastries made from fresh, local, and sustainable ingredients using zero single-use plastics.
-                    </p>
+                        Traditionally crafted puddings and pastries served in wild combinations made from all local ingredients with a focus on zero-plastic usage and sustainability.
+                    </p>	
                     <div class="action-buttons">
-                        <a class="primary-btn" href="#">Contact Us</a>
+                        <a class="primary-btn" href="#contact-section">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -140,11 +137,8 @@
     <section class="cta-section section-half">
         <div class="container">
             <div class="row">
-                <div class="col-lg-9">
-                    <h1 class="text-white text-uppercase">Delicious treats, locally sourced sustainable ingredients</h1>
-                </div>
-                <div class="col-lg-3">
-                    <a class="primary-btn text-uppercase outline-btn section-btn" href="#contact-section">Contact Us</a>
+                <div class="col-lg-12 text-center">
+                    <h2 class="text-white text-uppercase">Sustainable. Passionate. Local. Delicious.</h2>
                 </div>
             </div>
         </div>
@@ -156,8 +150,8 @@
         <div class="container">
             <div class="row">
                 <div class="section-title col-lg-12">
-                    <h1>About us</h1>
-                    <h3>All You Need To Know</h3>
+                    <h2>Our Mission</h2>
+                    <h3>Showing the world that it can be sweet, without the plastic wrapper.</h3>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -166,7 +160,7 @@
                     <div class="about-details">
                         <h4>The Best Ingredients</h4>
                         <p>
-                            We source locally grown ingredients for all of our desserts and treats.
+                            We pledge to donate a portion of our time and profits to plastic cleanup efforts around the world.
                         </p>
                     </div>
                 </div>
@@ -175,7 +169,7 @@
                     <div class="about-details">
                         <h4>Sustainability is at our Core</h4>
                         <p>
-                            We strive to ensure our locally sourced ingredients are sustainable and renewable. 
+                            We promise to use metal straws, plastic-free water bottles, wooden spoons and glass jars to help combat waste pollution. 
                         </p>
                     </div>
                 </div>
@@ -184,7 +178,7 @@
                     <div class="about-details">
                         <h4>Zero Single-use Plastics</h4>
                         <p>
-                            We ensure a stronger future for our planet by utilizing zero single-use plastics.
+                            “To better serve our Earth, we pledge to use zero single-use plastics in our daily operations.”
                         </p>
                     </div>
                 </div>
@@ -194,7 +188,7 @@
     <!-- End about section -->
 
     <!-- Start service section -->
-    <section class="service-section section-gap black-bg" id="service-section">
+    <section class="service-section section-gap black-bg" id="menu-section">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-5 col-md-6 service-left">
@@ -232,6 +226,10 @@
                         </div>
                     </div>
                 </div>
+				<div class="col-lg-12 col-md-12 text-center">
+				<p><img src="img/Puttin_On-The-Mitts-Menu.jpg" alt="Menu" class="menu-image img-fluid"></p>
+				<p><img src="img/meet-our-purvayors.jpg" alt="Meet Our Purvayors" class="img-fluid"></p>
+				</div>
             </div>
         </div>
     </section>
@@ -242,20 +240,17 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 work-left">
-                    <h4>Contact us with your dessert order!</h4>
-                    <h1>Place your Custom Order Today</h1>
+                    <h4>Find us at an event near you!</h4>
+                    <h2>View our events on Facebook</h2>
                     <p>
-                        We strive to provide a fast turn around time for our customers. Please contact us with your order details and we will be sure to complete your order as swiftly as possible.
-                    </p>
-					<p>
-                        All custom orders will be verified via phone or email, after which we will provide you with an estimated delivery date quickly and effeciently. 
-                    </p>
+                        Be sure to visit our Facebook page to see all our upcoming events and learn more about us.
+                    </p>	
 					<div class="action-buttons">
-                        <a class="primary-btn" href="#contact-section">Contact Us</a>
+                        <a class="primary-btn" href="https://www.facebook.com/pg/PuttinOnTheMitts/events" target="_new">View Events</a>
                     </div>
                 </div>
                 <div class="col-lg-6 work-right">
-					<div class="fb-page" data-href="https://www.facebook.com/PuttinOnTheMitts/" data-tabs="timeline" data-width="400" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/PuttinOnTheMitts/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/PuttinOnTheMitts/">Puttin On The Mitts</a></blockquote></div>
+					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPuttinOnTheMitts%2F&tabs=timeline&width=800&height=327&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=282768349265382" width="800" height="327" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
         </div>
@@ -263,152 +258,110 @@
     <!-- End work section -->
 
     <!-- Start portfolio section -->
-    <section class="portfolio-section section-gap black-bg" id="work-section">
+    <section class="portfolio-section section-gap black-bg" id="photo-section">
         <div class="container">
             <div class="row">
                 <div class="section-title col-lg-12 black-section-title">
-                    <h1>Photo Gallery</h1>
-                    <h3>A collection of our delicious deserts 
+                    <h2>Photo Gallery</h2>
+                    <h3>Puttin' a little love into your life! 
                     </h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-portfolio">
-                        <img class="img-fluid" src="img/item1.jpg" alt="">
+                        <img class="img-fluid" src="img/Baked-Goods.jpg" alt="Baked Goods">
                         <div class="portfolio-content">
-                            <h4 class="title">Title one</h4>
+                            <h4 class="title">Baked Goods</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-portfolio">
-                        <img src="img/item2.jpg" alt="">
+                        <img src="img/blueberry-ginger-cupcakes.jpg" alt="Blueberry Ginger Cupcakes">
                         <div class="portfolio-content">
-                            <h4 class="title">Title two</h4>
+                            <h4 class="title">Blueberry Ginger Cupcakes</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-portfolio">
-                        <img src="img/item3.jpg" alt="">
+                        <img src="img/Cabernet-Pudding.jpg" alt="Cabernet Pudding">
                         <div class="portfolio-content">
-                            <h4 class="title">Title three</h4>
+                            <h4 class="title">Cabernet Pudding</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-portfolio">
-                        <img src="img/item4.jpg" alt="">
+                        <img src="img/Linzer-Tart.jpg" alt="Linzer Tart">
                         <div class="portfolio-content">
-                            <h4 class="title">Title four</h4>
+                            <h4 class="title">Linzer Tart</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-portfolio">
-                        <img src="img/item5.jpg" alt="">
+                        <img src="img/oatmeal-cookie.jpg" alt="Oatmeal Cookie">
                         <div class="portfolio-content">
-                            <h4 class="title">Title five</h4>
+                            <h4 class="title">Oatmeal Cookie</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-portfolio">
-                        <img src="img/item6.jpg" alt="">
+                        <img src="img/pudding.jpg" alt="Pudding">
                         <div class="portfolio-content">
-                            <h4 class="title">Title Six</h4>
+                            <h4 class="title">Pudding</h4>
                         </div>
                     </div>
                 </div>
-
+				<div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-portfolio">
+                        <img src="img/truffles.jpg" alt="Truffles">
+                        <div class="portfolio-content">
+                            <h4 class="title">Truffles</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-portfolio">
+                        <img src="img/strawberry-shortcake.jpg" alt="Strawberry Shortcake">
+                        <div class="portfolio-content">
+                            <h4 class="title">Strawberry Shortcake</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-portfolio">
+                        <img src="img/Strawberries.jpg" alt="Strawberries">
+                        <div class="portfolio-content">
+                            <h4 class="title">Strawberries</h4>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- End portfolio section -->
 
-    <!-- Start team section -->
-    <section class="team-section section-gap offwhite-bg" id="team-section">
-        <div class="container">
-            <div class="row">
-                <div class="section-title col-lg-12">
-                    <h1>Our Team</h1>
-                    <h3>The People Behind Our Success</h3>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-6">
-                    <div class="our-team">
-                        <img src="img/laurel-odonnel.jpg" alt="">
-                        <div class="team-content">
-                            <h3 class="team-title">Laurel O'Donnell
-                                <small>Owner / Chef</small>
-                            </h3>
-                            <ul class="social-link">
-                                <li>
-                                    <a href="https://www.facebook.com/LaurelthEODonnell" class="fa fa-facebook"></a>
-                                </li>
-                                <li>
-                                    <a href="#" class="fa fa-instagram"></a>
-                                </li>
-                                <li>
-                                    <a href="#" class="fa fa-twitter"></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
- 
-            </div>
-        </div>
-    </section>
-    <!-- End team section -->
-
-
-    <!-- Start brands section -->
-    <section class="brands-section section-half">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6 single-brand">
-                    <a href="#">
-                        <img class="img-fluid" src="img/client-logo-01.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 single-brand">
-                    <a href="#">
-                        <img class="img-fluid" src="img/client-logo-02.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 single-brand">
-                    <a href="#">
-                        <img class="img-fluid" src="img/client-logo-03.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 single-brand">
-                    <a href="#">
-                        <img class="img-fluid" src="img/client-logo-04.png" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End brands section -->
-
     <!-- Start contact section -->
     <section class="contact-section offwhite-bg section-gap" id="contact-section">
         <div class="container">
             <div class="row">
-                <div class="section-title col-lg-12">
-                    <h1>Contact Us</h1>
-                    <h3>If You have Any Project Fell Free to Contact</h3>
+                <div class="section-title col-lg-12 contact-lead">
+                    <h2>Place your Custom Order Today</h2>
+                    <h3>We strive to provide excellent service for our customers</h3>
+					<p class="text-center">You can look to find a wide variety of puddin’, cookies, brownies, cakes, oatmeal cream pies, scones, muffins, and even some savory bites to help stave off all the alcohol that will inevitably be consumed, on a wine trail. We will have a variety of vegan, gluten-free, low sugar and other allergy friendly offerings as well as homemade dog/cat biscuits!</p>
+					<h5 class="text-center">All custom orders will be verified via phone or email, after which we will provide you with an estimated delivery date quickly and effeciently.</h5>
                 </div>
             </div>
-            <div class="row" id="contact_form">
+            <div class="row text-center" id="contact_form">
                 <div id="result"></div>
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <input type="text" name="name" id="name" placeholder="Enter Your Name" />
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <input type="email" name="email" id="email" placeholder="Enter Your Email" />
                 </div>
                 <div class="col-md-12">
