--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 work-right">
-					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpg%2FPuttinOnTheMitts%2F&tabs=timeline&width=350%60&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1232586070242733" width="350`" height="450" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe><!-- new -->
+					<iframe src="https://www.facebook.com/plugins/page.php?href=http%3A%2F%2Fwww.facebook.com%2Fputtinonthemitts&tabs=timeline&width=350&height=327&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1232586070242733" width="350" height="327" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
         </div>
