Owner info added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 </head>
 
 <body>
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=1232586070242733&autoLogAppEvents=1"></script>
     <!-- Start preloader -->
     <div id="preloader">
         <div class="pre-container">
@@ -227,12 +228,15 @@
 				<div class="col-lg-12 col-md-12 text-center">
 				<p><img src="img/Puttin_On-The-Mitts-Menu.jpg" alt="Menu" class="menu-image img-fluid"></p>
 				<p><img src="img/meet-our-purvayors.jpg" alt="Meet Our Purvayors" class="img-fluid"></p>
+				<p><img src="img/laurel-odonnell.jpg" alt="Purvayors" class="img-fluid"></p>
+				<h5>Laurel O'Donnell</h5>
+				<h6>Owner / Chef</h6>
 				</div>
             </div>
         </div>
     </section>
     <!-- End service section -->
-
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPuttinOnTheMitts%2F&tabs=timeline&width=400&height=600&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1232586070242733" width="400" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     <!-- Start work section -->
     <section class="work-section section-gap offwhite-bg">
         <div class="container">
@@ -248,7 +252,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 work-right">
-					<iframe src="https://www.facebook.com/plugins/page.php?href=http%3A%2F%2Fwww.facebook.com%2Fputtinonthemitts&tabs=timeline&width=350&height=327&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1232586070242733" width="350" height="327" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+					
                 </div>
             </div>
         </div>
