--- a/index.html
+++ b/index.html
@@ -229,14 +229,13 @@
 				<p><img src="img/Puttin_On-The-Mitts-Menu.jpg" alt="Menu" class="menu-image img-fluid"></p>
 				<p><img src="img/meet-our-purvayors.jpg" alt="Meet Our Purvayors" class="img-fluid"></p>
 				<p><img src="img/laurel-odonnell.jpg" alt="Purvayors" class="img-fluid"></p>
-				<h5>Laurel O'Donnell</h5>
-				<h6>Owner / Chef</h6>
+				<h3 class="owner-chef">Laurel O'Donnell</h3>
+				<h4 class="owner-chef">Owner / Chef</h4>
 				</div>
             </div>
         </div>
     </section>
     <!-- End service section -->
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPuttinOnTheMitts%2F&tabs=timeline&width=400&height=600&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1232586070242733" width="400" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     <!-- Start work section -->
     <section class="work-section section-gap offwhite-bg">
         <div class="container">
@@ -246,13 +245,14 @@
                     <h2>View our events on Facebook</h2>
                     <p>
                         Be sure to visit our Facebook page to see all our upcoming events and learn more about us.
-                    </p>	
+                    </p>
+					<p><a href="https://www.facebook.com/pg/PuttinOnTheMitts/events" target="_new"><img src="img/fb-banner.jpg"></a></p>					
 					<div class="action-buttons">
                         <a class="primary-btn" href="https://www.facebook.com/pg/PuttinOnTheMitts/events" target="_new">View Events</a>
                     </div>
                 </div>
                 <div class="col-lg-6 work-right">
-					
+				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPuttinOnTheMitts%2F&tabs=timeline&width=400&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1232586070242733" width="400" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
         </div>
