img fluid tag added

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <p>
                         Be sure to visit our Facebook page to see all our upcoming events and learn more about us.
                     </p>
-					<p><a href="https://www.facebook.com/pg/PuttinOnTheMitts/events" target="_new"><img src="img/fb-banner.jpg"></a></p>					
+					<p><a href="https://www.facebook.com/pg/PuttinOnTheMitts/events" target="_new"><img src="img/fb-banner.jpg" class="img-fluid"></a></p>					
 					<div class="action-buttons">
                         <a class="primary-btn" href="https://www.facebook.com/pg/PuttinOnTheMitts/events" target="_new">View Events</a>
                     </div>
