Menu slimmed for mobile added

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <head>
     <!-- Mobile Specific Meta -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- Favicon-->
     <link rel="shortcut icon" href="fav.png">
     <!-- Author Meta -->
     <meta name="author" content="">
     <!-- Meta Description -->
-    <meta name="description" content="Alcohol-inspired pudding sundaes and pastries made from fresh, local, and sustainable ingredients using zero single-use plastics.">
+    <meta name="description" content="Traditionally crafted puddings and pastries served in wild combinations made from all local ingredients with a focus on zero-plastic usage and sustainability.">
     <!-- Meta Keyword -->
     <meta name="keywords" content="">
     <!-- meta character set -->
