Mobile menu classes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                     </div>
                 </div>
 				<div class="col-lg-12 col-md-12 text-center">
-				<p><img src="img/Puttin_On-The-Mitts-Menu.jpg" alt="Menu" class="menu-image img-fluid"></p>
+				<p><img src="img/Puttin_On-The-Mitts-Menu.jpg" alt="Menu" class="menu-image img-fluid menu-desktop"></p>
+				<p><img src="img/Puttin_On-The-Mitts-Menu-mobile.jpg" alt="Menu" class="menu-image img-fluid menu-mobile"></p>			
 				<p><img src="img/meet-our-purvayors.jpg" alt="Meet Our Purvayors" class="img-fluid"></p>
 				<p><img src="img/laurel-odonnell.jpg" alt="Purvayors" class="img-fluid"></p>
 				<h3 class="owner-chef">Laurel O'Donnell</h3>
