--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Author Meta -->
     <meta name="author" content="">
     <!-- Meta Description -->
-    <meta name="description" content="Traditionally crafted puddings and pastries served in wild combinations made from all local ingredients with a focus on zero-plastic usage and sustainability.">
+    <meta name="description" content="Puttin’ On The Mitts is located in the beautiful Finger Lakes A.V.A in Upstate NY and serves traditional stove-top puddings reimagined with local flair and the freshest ingredients.  Look for our alcohol inspired pudding flavors as well as the classics such as vanilla, banana, chocolate and butterscotch!  We have a rotating variety of baked goods, pastries, gluten-free and allergy friendly goods, local roasted coffee, tea, juices and kombucha.  We pledge to be plastic-free and use only reusable, biodegradable and compostable products to help protect our earth.">
     <!-- Meta Keyword -->
     <meta name="keywords" content="">
     <!-- meta character set -->
@@ -35,6 +35,7 @@
 
 </head>
 
+<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 <body>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=1232586070242733&autoLogAppEvents=1"></script>
@@ -97,6 +98,9 @@
                                     <li>
                                         <a href="#photo-section">Photo Gallery</a>
                                     </li>
+									<li>
+                                        <a href="#events-section">Events</a>
+                                    </li>								
                                     <li>
                                         <a href="#contact-section">Contact</a>
                                     </li>
@@ -150,34 +154,34 @@
             <div class="row">
                 <div class="section-title col-lg-12">
                     <h2>Our Mission</h2>
-                    <h3>Showing the world that it can be sweet, without the plastic wrapper.</h3>
+                    <h3 style="font-style: italic;">"To show the world that it can be sweet, without the plastic wrapper."</h3>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 single-about">
                     <img class="img-fluid" src="img/ingredients.jpg" alt="">
                     <div class="about-details">
-                        <h4>The Best Ingredients</h4>
+                        <h4>Fresh & Local Ingredients</h4>
                         <p>
-                            We pledge to donate a portion of our time and profits to plastic cleanup efforts around the world.
+                            We strive to maintain good relationships with our local farmers, which ensures that we get our ingredients fresh and directly from the source.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 single-about">
                     <img class="img-fluid" src="img/sustainability.jpg" alt="">
                     <div class="about-details">
-                        <h4>Sustainability is at our Core</h4>
+                        <h4>Sustainable Practices</h4>
                         <p>
-                            We promise to use metal straws, plastic-free water bottles, wooden spoons and glass jars to help combat waste pollution. 
+                            We promise to use glass jars, metal straws, reusable water bottles, wooden spoons and other biodegradable products to combat waste pollution. 
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 single-about">
                     <img class="img-fluid" src="img/no-plastic.jpg" alt="">
                     <div class="about-details">
-                        <h4>Zero Single-use Plastics</h4>
+                        <h4>Zero Single-Use Plastics</h4>
                         <p>
-                            “To better serve our Earth, we pledge to use zero single-use plastics in our daily operations.”
+                            “We pledge to donate a portion of our time and profits to global plastic cleanup efforts while actively using zero single-use plastics in our daily operations.”
                         </p>
                     </div>
                 </div>
@@ -193,9 +197,6 @@
                 <div class="col-lg-5 col-md-6 service-left">
                     <h4>Puttin' on the Mitts</h4>
                     <h2>Pudding sundaes & pastries</h2>
-                    <p>
-                        Detail on the item here. Detail on the item here. Detail on the item here. Detail on the item here. Detail on the item here. 
-                    </p>
                 </div>
                 <div class="col-lg-6 col-md-6 service-right">
                     <div class="row">
@@ -238,7 +239,7 @@
     </section>
     <!-- End service section -->
     <!-- Start work section -->
-    <section class="work-section section-gap offwhite-bg">
+    <section class="events-section section-gap offwhite-bg" id="events-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 work-left">
@@ -362,14 +363,19 @@
             <div class="row text-center" id="contact_form">
                 <div id="result"></div>
                 <div class="col-md-12">
-                    <input type="text" name="name" id="name" placeholder="Enter Your Name" />
+					<form action="https://send.pageclip.co/alWzraL1pDKonRVAF1bGAvvvwTR2nIRB/Website_Feedback_Form" class="pageclip-form" method="post">
+                    <input type="text" name="Name" id="name" placeholder="Enter Your Name" />
                 </div>
                 <div class="col-md-12">
-                    <input type="email" name="email" id="email" placeholder="Enter Your Email" />
+                    <input type="email" name="Email" id="email" placeholder="Enter Your Email" />
+                </div>
+				<div class="col-md-12">
+                    <input type="text" name="Phone" id="email" placeholder="Enter Your Phone Number" />
                 </div>
                 <div class="col-md-12">
-                    <textarea name="message" id="message" placeholder="Enter Your Message"></textarea>
+                    <textarea name="message" id="Message" placeholder="Enter Your Message"></textarea>
                     <button class="send_btn" id="submit_btn">Submit</button>
+					</form>
                 </div>
 
             </div>
