--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <img src="img/putting-on-the-mitts.png" class="logo-lead">
                     <h1 class="text-uppercase">Puttin' On The Mitts<br /> Puddin' and Dessert Truck</h1>
                     <p>
-                        Traditionally crafted puddings and pastries served in wild combinations made from all local ingredients with a focus on zero-plastic usage and sustainability.
+                        Traditionally crafted puddings and pastries served in wild combinations and made from all local ingredients with a focus on zero-plastic usage and sustainability.
                     </p>	
                     <div class="action-buttons">
                         <a class="primary-btn" href="#contact-section">Contact Us</a>
